syntax = "proto2";

package base;



message ClientData
{
	required string name = 1;
	required int32 id = 2;
	required bool is_admin = 3;
}
message PluginData
{
	required string id = 1;
	required int32 session_id = 2;
}


message ClientJoin
{
	required int32 type = 1;
	required string name = 2;
}
message ClientState
{
	required int32 type = 1;
	optional int32 plugin_session_id = 2;
	required int32 state = 3;
}


message ServerJoin
{
	required int32 type = 1;
	required ClientData data = 2;
	required bool is_local = 3;
}
message ServerPlugin
{
	required int32 type = 1;
	required PluginData data = 2;
}
message ServerSetState
{
	required int32 type = 1;
	optional int32 plugin_id = 2;
	required int32 state = 3;
}
